--- a/roles/aws-vpc/tasks/aws-vpc.yml
+++ b/roles/aws-vpc/tasks/aws-vpc.yml
@@ -1,5 +1,5 @@
 - name: create a VPC with dedicated tenancy and a couple of tags
-  amazon.aws.ec2_vpc_net:
+  ec2_vpc_net:
     name: Test
     cidr_block: 10.10.0.0/16
     region: us-east-2
