added windows ec2 role'

--- a/site.yml
+++ b/site.yml
@@ -5,4 +5,6 @@
    ansible_connection: local
   tasks:
   - include_role:
-      name: aws-vpc 
+      name: aws-vpc
+  - include_role:
+      name: ec2_windows_ami-0f25b344af3f73199 
