--- a/roles/aws-vpc/tasks/aws-vpc.yml
+++ b/roles/aws-vpc/tasks/aws-vpc.yml
@@ -1,8 +1,9 @@
 - name: create a VPC with dedicated tenancy and a couple of tags
   ec2_vpc_net:
-    name: Test
+    name: "{{ ec2_vpc_name }}"
     cidr_block: 10.10.0.0/16
-    region: us-east-2
+    region: "{{ region }}"
     tags:
         module: ec2_vpc_net
         this: works
+  register: vpc_output
