made changes to variable structure and register vars

--- a/roles/aws-vpc/tasks/aws-vpc.yml
+++ b/roles/aws-vpc/tasks/aws-vpc.yml
@@ -4,6 +4,6 @@
     cidr_block: 10.10.0.0/16
     region: "{{ region }}"
     tags:
-        module: ec2_vpc_net
-        this: works
+        name: ec2_vpc_name
+        environment: test
   register: vpc_output
