--- a/roles/ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
+++ b/roles/ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
@@ -1,11 +1,12 @@
 ---
 # tasks file for roles/ec2_windows_ami-0f25b344af3f73199
-- ec2_instance:
+- name: create microsoft ec2
+  ec2_instance:
     region: "{{ region }}"
     key_name: "{{ key_name }}"
     vpc_subnet_id: "{{ vpc_subnet_id }}"
     instance_type: "{{ instance_type }}"
-    security_group: default
+    #security_group: [ "{{ sg_output.group_id }}" ]
     network:
       assign_public_ip: true
     image_id: "{{ image }}"
