made changes to vpc subnet

--- a/roles/aws-vpc/tasks/aws-vpc.yml
+++ b/roles/aws-vpc/tasks/aws-vpc.yml
@@ -9,12 +9,9 @@
         environment: test
   register: vpc_output
 
-#- set_fact:
-#    set_ec2_vpc_id: "{{ vpc_output.vpc-id }}"
-
 - name: Create EC2 vpc subnet
   ec2_vpc_subnet:
-    vpc_id: "{{ vpc_output.vpc.id }}"
+    vpc_id: "{{ vpc_output.vpcs.id }}"
     region: "{{ region }}"
     state: present
     cidr: 10.10.0.0/16
