--- a/roles/ec2_security_group/tasks/main.yml
+++ b/roles/ec2_security_group/tasks/main.yml
@@ -1,9 +1,17 @@
 ---
 # tasks file for roles/ec2_security_group
+- name: find vpc id for object "{{ object_tag_identifier }}"
+  ec2_vpc_net_info:
+    filters:
+      "tag:Name": test
+  register: vpc_net_info_output
+
 - name: ensure security group is present
   ec2_group:
+    state: present
     name: "{{ ec2_group_name }}"
     description: Inbound WinRM and RDP
+    vpc_id: "{{ vpc_net_info_output.vpcs.id }}"
     region: "{{ region }}"
     rules:
     - proto: tcp
