added region for ec2 sg

--- a/roles/ec2_security_group/tasks/main.yml
+++ b/roles/ec2_security_group/tasks/main.yml
@@ -4,7 +4,7 @@
   ec2_vpc_net_info:
     region: "{{ region }}"
     filters:
-      "tag:Name": test
+      "tag:environment": test
   register: vpc_net_info_output
 
 - name: ensure security group is present
