--- a/roles/ec2_security_group/tasks/main.yml
+++ b/roles/ec2_security_group/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 # tasks file for roles/ec2_security_group
-- name: find vpc id for object "{{ object_tag_identifier }}"
+- name: find vpc id for sg object "{{ object_tag_identifier }}"
   ec2_vpc_net_info:
     region: "{{ region }}"
     filters:
@@ -12,7 +12,7 @@
     state: present
     name: "{{ ec2_group_name }}"
     description: Inbound WinRM and RDP
-    vpc_id: "{{ vpc_net_info_output.vpcs.id }}"
+    vpc_id: "{{ vpc_net_info_output.vpcs.vpc_id }}"
     region: "{{ region }}"
     rules:
     - proto: tcp
