--- a/roles/ec2_security_group/tasks/main.yml
+++ b/roles/ec2_security_group/tasks/main.yml
@@ -1,14 +1,14 @@
 ---
 # tasks file for roles/ec2_security_group
 - name: find vpc id for sg object "{{ object_tag_identifier }}"
-  ec2_vpc_net_info:
+  ec2_vpc_subnet_info:
     region: "{{ region }}"
     filters:
       "tag:environment": test
   register: vpc_net_info_output
 
 - name: display some output
-  debug: var="{{ vpc_net_info_output.vpcs.vpc_id }}"
+  debug: var="{{ vpc_net_info_output.subnets.vpc_id }}"
 
 - name: ensure security group is present
   ec2_group:
