--- a/roles/ec2_security_group/tasks/main.yml
+++ b/roles/ec2_security_group/tasks/main.yml
@@ -10,12 +10,18 @@
 - name: display some output
   debug: var=vpc_net_info_output
 
+- set_fact:
+  vpc_id_input:   "{{ vpc_net_info_output.subnets.vpc_id }}"
+
+- name: display some output
+  debug: var=vpc_id_input  
+
 - name: ensure security group is present
   ec2_group:
     state: present
     name: "{{ ec2_group_name }}"
     description: Inbound WinRM and RDP
-    vpc_id: "{{ vpc_net_info_output.vpcs.id }}"
+    vpc_id: "{{ vpc_id_input }}"
     region: "{{ region }}"
     rules:
     - proto: tcp
