added region for ec2 sg

--- a/roles/ec2_security_group/tasks/main.yml
+++ b/roles/ec2_security_group/tasks/main.yml
@@ -10,12 +10,15 @@
 - name: display some output
   debug: var=vpc_net_info_output
 
+- set_fact:
+    lloyd_test: "{{ vpc_net_info_output.vpcs.id }}"  
+
 - name: ensure security group is present
   ec2_group:
     state: present
     name: "{{ ec2_group_name }}"
     description: Inbound WinRM and RDP
-    vpc_id: "{{ vpc_net_info_output.vpc_id }}"
+    vpc_id: "{{ lloyd_test }}"
     region: "{{ region }}"
     rules:
     - proto: tcp
