--- a/roles/ec2_security_group/tasks/main.yml
+++ b/roles/ec2_security_group/tasks/main.yml
@@ -8,14 +8,14 @@
   register: vpc_net_info_output
 
 - debug: var=item
-  with_items: vpc_net_info_output.vpcs 
+  with_items: vpc_net_info_output 
 
 - name: ensure security group is present
   ec2_group:
     state: present
     name: "{{ ec2_group_name }}"
     description: Inbound WinRM and RDP
-    vpc_id: "{{ item.id }}"
+    vpc_id: "{{ item.vpcs.id }}"
     region: "{{ region }}"
     rules:
     - proto: tcp
