--- a/roles/aws-vpc/vars/main.yml
+++ b/roles/aws-vpc/vars/main.yml
@@ -1,4 +1,6 @@
 ---
 # vars file for aws-vpc
-ec2_vpc_name: vpc_test
-region: us-east-2
+aws_vpc_name: vpc_test
+aws_region: us-east-2
+aws_environment_identifier: test
+aws_ansible_iam_role: iam_ansible_role
