--- a/roles/ec2_security_group/tasks/main.yml
+++ b/roles/ec2_security_group/tasks/main.yml
@@ -1,22 +1,26 @@
 ---
 # tasks file for roles/ec2_security_group
-- name: find vpc id for sg object "{{ object_tag_identifier }}"
+- name: find vpc id for sg object "{{ aws_environment_identifier }}"
   ec2_vpc_net_info:
-    region: "{{ region }}"
+    region: "{{ aws_region }}"
     filters:
-      "tag:environment": test
+      "tag:environment": "{{ aws_environment_identifier }}"
   register: vpc_net_info_output
 
 - set_fact:
     vpc_id_fact: "{{ vpc_net_info_output.vpcs[0].id }}"
 
-- name: ensure security group is present
+- name: creating security group "{{ aws_security_group_name }}" in "{{ aws_environment_identifier }}" and attaching "{{ vpc_id_fact }}"
   ec2_group:
     state: present
-    name: "{{ ec2_group_name }}"
+    name: "{{ aws_security_group_name }}"
     description: Inbound WinRM and RDP
     vpc_id: "{{ vpc_id_fact }}"
-    region: "{{ region }}"
+    region: "{{ aws_region }}"
+    tags:
+      name: "{{ aws_security_group_name }}"
+      admin_name: "{{ aws_ansible_iam_role }}"
+      environment: "{{ aws_environment_identifier }}"
     rules:
     - proto: tcp
       from_port: 80
