--- a/roles/aws_security_group/tasks/main.yml
+++ b/roles/aws_security_group/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 # tasks file for roles/ec2_security_group
-- name: find vpc id for sg object "{{ aws_environment_identifier }}"
+- name: find vpc id for sg object "{{ aws_security_group_name }}"
   ec2_vpc_net_info:
     region: "{{ aws_region }}"
     filters:
@@ -35,3 +35,15 @@
       to_port: 3389
       cidr_ip: 0.0.0.0/0
   register: sg_output
+
+- name: find security group id for ec2 instance "{{ aws_instance_type }}"
+  ec2_group_info:
+    region: "{{ aws_region }}"
+    filters:
+      "tag:environment": "{{ aws_environment_identifier }}"
+  register: ec2_group_info_output
+
+- set_fact:  
+    security_group_id_fact: "{{ ec2_group_info_output.security_groups[0] }}"
+
+- debug: "{{security_group_id_fact}}"
