--- a/roles/aws_security_group/tasks/main.yml
+++ b/roles/aws_security_group/tasks/main.yml
@@ -40,10 +40,11 @@
   ec2_group_info:
     region: "{{ aws_region }}"
     filters:
+      vpc-id: "{{ vpc_id_fact }}"
       "tag:environment": "{{ aws_environment_identifier }}"
   register: ec2_group_info_output
 
 - set_fact:  
     security_group_id_fact: "{{ ec2_group_info_output.security_groups[0] }}"
 
-- debug: "{{security_group_id_fact}}"
+- debug: var=ec2_group_info_output.security_groups[0].group_id
