fixed_vpc_net_info output to input

--- a/roles/aws-vpc/tasks/aws-vpc.yml
+++ b/roles/aws-vpc/tasks/aws-vpc.yml
@@ -1,7 +1,7 @@
 - name: create a VPC with dedicated tenancy and a couple of tags
   ec2_vpc_net:
     name: "{{ aws_vpc_name }}"
-    cidr_block: 10.10.0.0/16
+    cidr_block: "{{ aws_cidr }}"
     region: "{{ aws_region }}"
     state: present
     tags:
@@ -9,13 +9,3 @@
         environment: "{{ aws_environment_identifier }}"
         owner: aws_ansible_iam_role
   register: vpc_output
-
-- name: Create VPC subnet and attach to "{{ aws_vpc_name }}"
-  ec2_vpc_subnet:
-    vpc_id: "{{ vpc_output.vpc.id }}"
-    region: "{{ aws_region }}"
-    state: present
-    cidr: 10.10.0.0/16
-    resource_tags:
-        environment: "{{ aws_environment_identifier }}"
-  register: vpc_subnet_output
