--- a/roles/aws-vpc/vars/main.yml
+++ b/roles/aws-vpc/vars/main.yml
@@ -4,3 +4,4 @@ aws_vpc_name: vpc_test
 aws_region: us-east-2
 aws_environment_identifier: test
 aws_ansible_iam_role: iam_ansible_role
+aws_cidr: 10.10.0.0/16
