--- a/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
+++ b/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
@@ -1,15 +1,5 @@
 ---
 # tasks file for roles/ec2_windows_ami-0f25b344af3f73199
-- name: find security group id for ec2 instance "{{ aws_instance_type }}"
-  ec2_group_info:
-    region: "{{ aws_region }}"
-    filters:
-      "tag:environment": "{{ aws_environment_identifier }}"
-  register: ec2_group_info_output
-
-- set_fact:  
-    security_group_id_fact: "{{ ec2_group_info_output.security_groups[0] }}"
-
 - name: find vpc id for sg object "{{ aws_security_group_name }}"
   ec2_vpc_net_info:
     region: "{{ aws_region }}"
@@ -19,6 +9,22 @@
 
 - set_fact:
     vpc_id_fact: "{{ vpc_net_info_output.vpcs[0].id }}"
+
+- name: find security group id for ec2 instance "{{ aws_instance_type }}"
+  ec2_group_info:
+    region: "{{ aws_region }}"
+    filters:
+      vpc-id: "{{ vpc_id_fact }}"
+      "tag:environment": "{{ aws_environment_identifier }}"
+  register: ec2_group_info_output
+
+- set_fact:  
+    security_group_id_fact: "{{ ec2_group_info_output.security_groups[0].group_id }}"
+
+- name: create a new ec2 key pair, returns generated private key
+  ec2_key:
+    name: "{{ aws_ec2_key_name }}"
+  register: ec2_key_output      
 
 - name: create microsoft ec2
   ec2_instance:
@@ -36,4 +42,4 @@
       operating_system: "{{ aws_os_type }}"
       environment: "{{ aws_environment_identifier }}"
       owner: "{{ aws_ansible_iam_role }}"
-      group: "{{ aws_security_group }}"
+      group: "{{ security_group_id_fact }}"
