--- a/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
+++ b/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
@@ -41,7 +41,7 @@
     network:
       assign_public_ip: true
     image_id: "{{ aws_ami_image_id }}"
-    user_data:  "{{ lookup('file', '{{ user_data }}') }}"
+    user_data:  "{{ lookup('file', '{{ aws_ec2_windows_user_data }}') }}"
     instance_role: "{{ aws_ansible_iam_role }}"
     tags:
       operating_system: "{{ aws_os_type }}"
