--- a/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
+++ b/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
@@ -10,6 +10,13 @@
 - set_fact:
     vpc_id_fact: "{{ vpc_net_info_output.vpcs[0].id }}"
 
+- ec2_vpc_subnet_info:
+    filters:
+      vpc-id: "{{ vpc_id_fact }}"
+  register: ec2_vpc_subnet_info_output
+
+- debug: var=ec2_vpc_subnet_info_output.subnets.id
+
 - name: find security group id for ec2 instance "{{ aws_instance_type }}"
   ec2_group_info:
     region: "{{ aws_region }}"
@@ -30,21 +37,3 @@
 - name: Save private key
   copy: content="{{ ec2_key_output.key.private_key }}" dest="./aws.key.pem" mode=0600
   when: ec2_key_output.changed
-
-- name: create microsoft ec2
-  ec2_instance:
-    region: "{{ aws_region }}"
-    key_name: "{{ aws_ec2_key_name }}"
-    vpc_subnet_id: "{{ vpc_id_fact }}"
-    instance_type: "{{ aws_instance_type }}"
-    security_group: "{{ security_group_id_fact }}"
-    network:
-      assign_public_ip: true
-    image_id: "{{ aws_ami_image_id }}"
-    user_data:  "{{ lookup('file', '{{ aws_ec2_windows_user_data }}') }}"
-    instance_role: "{{ aws_ansible_iam_role }}"
-    tags:
-      operating_system: "{{ aws_os_type }}"
-      environment: "{{ aws_environment_identifier }}"
-      owner: "{{ aws_ansible_iam_role }}"
-      group: "{{ security_group_id_fact }}"
