--- a/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
+++ b/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
@@ -11,8 +11,9 @@
     vpc_id_fact: "{{ vpc_net_info_output.vpcs[0].id }}"
 
 - ec2_vpc_subnet_info:
+    region: "{{ aws_region }}"
     filters:
-      vpc-id: "{{ vpc_id_fact }}"
+      "tag:environment": "{{ aws_environment_identifier }}"
   register: ec2_vpc_subnet_info_output
 
 - debug: var=ec2_vpc_subnet_info_output.subnets.id
