--- a/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
+++ b/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 # tasks file for roles/ec2_windows_ami-0f25b344af3f73199
-- name: find vpc id for sg object "{{ aws_security_group_name }}"
+- name: find vpc id for ec2 instance in environment "{{ aws_environment_identifier }}" and region "{{ aws_region }}"
   ec2_vpc_net_info:
     region: "{{ aws_region }}"
     filters:
@@ -10,15 +10,17 @@
 - set_fact:
     vpc_id_fact: "{{ vpc_net_info_output.vpcs[0].id }}"
 
-- ec2_vpc_subnet_info:
+- name: find vpc subnet id for vpc in environment "{{ aws_environment_identifier }}" and region "{{ aws_region }}"
+  ec2_vpc_subnet_info:
     region: "{{ aws_region }}"
     filters:
       "tag:environment": "{{ aws_environment_identifier }}"
   register: ec2_vpc_subnet_info_output
 
-- debug: var=ec2_vpc_subnet_info_output.subnets.id
+- set_fact:
+    vpc_subnet_id_fact: "{{ ec2_vpc_subnet_info_output.subnets.id }}"
 
-- name: find security group id for ec2 instance "{{ aws_instance_type }}"
+- name: find security group id in environment "{{ aws_environment_identifier }}" and region "{{ aws_region }}"
   ec2_group_info:
     region: "{{ aws_region }}"
     filters:
@@ -29,7 +31,7 @@
 - set_fact:  
     security_group_id_fact: "{{ ec2_group_info_output.security_groups[0].group_id }}"
 
-- name: create a new ec2 key pair, returns generated private key
+- name: create a new ec2 key pair for new ec 2 instance in evironment "{{ aws_environment_identifier }}" and region "{{ aws_region }}"
   ec2_key:
     name: "{{ aws_ec2_key_name }}"
     region: "{{ aws_region }}"
@@ -38,3 +40,22 @@
 - name: Save private key
   copy: content="{{ ec2_key_output.key.private_key }}" dest="./aws.key.pem" mode=0600
   when: ec2_key_output.changed
+
+- name: create microsoft ec2 in evironment "{{ aws_environment_identifier }}" and region "{{ aws_region }}"
+  ec2_instance:
+    region: "{{ aws_region }}"
+    key_name: "{{ aws_ec2_key_name }}"
+    vpc_subnet_id: "{{ vpc_subnet_id_fact }}"
+    instance_type: "{{ aws_instance_type }}"
+    security_group: "{{ security_group_id_fact }}"
+    network:
+      assign_public_ip: true
+    image_id: "{{ aws_ami_image_id }}"
+    user_data:  "{{ lookup('file', '{{ aws_ec2_windows_user_data }}') }}"
+    instance_role: "{{ aws_ansible_iam_role }}"
+    tags:
+      operating_system: "{{ aws_os_type }}"
+      environment: "{{ aws_environment_identifier }}"
+      owner: "{{ aws_ansible_iam_role }}"
+      group: "{{ security_group_id_fact }}"
+  register: ec2_instances_output
