--- a/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
+++ b/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
@@ -38,24 +38,35 @@
   register: ec2_key_output      
 
 - name: Save private key
-  copy: content="{{ ec2_key_output.key.private_key }}" dest="./aws.key.pem" mode=0600
+  copy: content="{{ ec2_key_output.key.private_key }}" dest="keys/{{ aws_ec2_key_name }}.pem" mode=0600
   when: ec2_key_output.changed
 
-- name: create microsoft ec2 in evironment "{{ aws_environment_identifier }}" and region "{{ aws_region }}"
-  ec2_instance:
-    region: "{{ aws_region }}"
+- name: create microsoft ec2 in evironment "{{ aws_environment_identifier }}" and region "{{ aws_region }}" 
+  ec2:
     key_name: "{{ aws_ec2_key_name }}"
-    vpc_subnet_id: "{{ vpc_subnet_id_fact }}"
+    instance_profile_name: "{{ aws_ansible_iam_role }}"
+    group_id: "{{ security_group_id_fact }}"
     instance_type: "{{ aws_instance_type }}"
-    security_group: "{{ security_group_id_fact }}"
-    network:
-      assign_public_ip: true
-    image_id: "{{ aws_ami_image_id }}"
+    region: "{{ aws_region }}"
+    image: "{{ aws_ami_image_id }}"
     user_data:  "{{ lookup('file', '{{ aws_ec2_windows_user_data }}') }}"
-    instance_role: "{{ aws_ansible_iam_role }}"
-    tags:
-      operating_system: "{{ aws_os_type }}"
+    wait: yes
+    wait_timeout: 500
+    instance_tags:
+      instance_name: "{{ aws_ec2_instance_name }}"
       environment: "{{ aws_environment_identifier }}"
+      operating_system: "{{ aws_os_type }}"
+      ami_id: "{{ aws_ami_image_id }}"
       owner: "{{ aws_ansible_iam_role }}"
       group: "{{ security_group_id_fact }}"
-  register: ec2_instances_output
+    monitoring: yes
+    vpc_subnet_id: "{{ vpc_subnet_id_fact }}"
+    assign_public_ip: yes
+  register: ec2_output
+
+- name: Add the newly created EC2 instance(s) to the ec2 inventory file
+  local_action: lineinfile 
+                path="inventory/ec2"
+                regexp={{ item.public_ip }} 
+                insertafter="[ec2]" line="{{ item.public_ip }}"
+  with_items: "{{ ec2_output.instances }}"
