--- a/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
+++ b/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
@@ -38,7 +38,7 @@
   register: ec2_key_output      
 
 - name: Save private key
-  copy: content="{{ ec2_key_output.key.private_key }}" dest="keys/{{ aws_ec2_key_name }}.pem" mode=0600
+  copy: content="{{ ec2_key_output.key.private_key }}" dest="./keys/{{ aws_ec2_key_name }}.pem" mode=0600
   when: ec2_key_output.changed
 
 - name: create microsoft ec2 in evironment "{{ aws_environment_identifier }}" and region "{{ aws_region }}" 
@@ -66,7 +66,7 @@
 
 - name: Add the newly created EC2 instance(s) to the ec2 inventory file
   local_action: lineinfile 
-                path="inventory/ec2"
+                path="./inventory/ec2"
                 regexp={{ item.public_ip }} 
                 insertafter="[ec2]" line="{{ item.public_ip }}"
   with_items: "{{ ec2_output.instances }}"
