--- a/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
+++ b/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
@@ -64,9 +64,12 @@
     assign_public_ip: yes
   register: ec2_output
 
+- set_fact:  
+    ec2_public_ip_fact: "{{ ec2_output.instances[0].public_ip }}"
+
 - name: Add the newly created EC2 instance(s) to the ec2 inventory file
-  local_action: lineinfile 
-                path="./inventory/ec2"
-                regexp={{ item.public_ip }} 
-                insertafter="[ec2]" line="{{ item.public_ip }}"
-  with_items: "{{ ec2_output.instances }}"
+  lineinfile: 
+    path: /tmp/ec2
+    insertafter: '^[ec2]'
+    line: "{{ ec2_public_ip_fact }}"
+  delegate_to: localhost 
