--- a/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
+++ b/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
@@ -38,7 +38,7 @@
   register: ec2_key_output      
 
 - name: Save private key
-  copy: content="{{ ec2_key_output.key.private_key }}" dest="./keys/{{ aws_ec2_key_name }}.pem" mode=0600
+  copy: content="{{ ec2_key_output.key.private_key }}" dest="/tmp/{{ aws_ec2_key_name }}.pem" mode=0600
   when: ec2_key_output.changed
 
 - name: create microsoft ec2 in evironment "{{ aws_environment_identifier }}" and region "{{ aws_region }}" 
@@ -62,14 +62,14 @@
     monitoring: yes
     vpc_subnet_id: "{{ vpc_subnet_id_fact }}"
     assign_public_ip: yes
-  register: ec2_output
+  register: ec2
 
 - set_fact:  
     ec2_public_ip_fact: "{{ ec2_output.instances[0].public_ip }}"
 
-- name: Add the newly created EC2 instance(s) to the ec2 inventory file
-  lineinfile: 
-    path: /tmp/ec2
-    insertafter: '^[ec2]'
-    line: "{{ ec2_public_ip_fact }}"
-  delegate_to: localhost 
+- name: Add the newly created EC2 instance(s) to the local host group
+  local_action: lineinfile 
+                path="/tmp/ec2"
+                regexp={{ item.public_ip }} 
+                insertafter="[jumpbpox]" line="{{ item.public_ip }}"
+  with_items: "{{ ec2.instances }}"
