--- a/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
+++ b/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
@@ -71,5 +71,5 @@
   local_action: lineinfile 
                 path="/tmp/ec2"
                 regexp={{ item.public_ip }} 
-                insertafter="[jumpbpox]" line="{{ item.public_ip }}"
+                insertafter="[ec2]" line="{{ item.public_ip }}"
   with_items: "{{ ec2.instances }}"
