--- a/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
+++ b/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
@@ -39,7 +39,7 @@
 
 - name: Save private key
   copy: content="{{ ec2_key_output.key.private_key }}" dest="/tmp/{{ aws_ec2_key_name }}.pem" mode=0600
-  when: ec2_key_output.changed == 
+  when: ec2_key_output.changed
 
 - name: create microsoft ec2 in evironment "{{ aws_environment_identifier }}" and region "{{ aws_region }}" 
   ec2:
