--- a/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
+++ b/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
@@ -43,9 +43,9 @@
 
 - name: create microsoft ec2 in evironment "{{ aws_environment_identifier }}" and region "{{ aws_region }}" 
   ec2:
-    id: ec2_test2
+    id: aws_ec2_instance_name
     key_name: "{{ aws_ec2_key_name }}"
-    instance_profile_name: "{{ aws_ec2_instance_name }}"
+    instance_profile_name: "{{ aws_ansible_iam_role }}"
     group_id: "{{ security_group_id_fact }}"
     instance_type: "{{ aws_instance_type }}"
     region: "{{ aws_region }}"
