--- a/roles/aws_ec2_windows_ami-0f25b344af3f73199/vars/main.yml
+++ b/roles/aws_ec2_windows_ami-0f25b344af3f73199/vars/main.yml
@@ -8,5 +8,5 @@ aws_environment_identifier: test
 aws_ec2_windows_user_data: user_data/winrm.txt
 aws_ansible_iam_role: iam_ansible_role
 aws_os_type: windows
-aws_ec2_group: testt
+aws_ec2_group: test
 aws_ec2_instance_name: test
