--- a/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
+++ b/roles/aws_ec2_windows_ami-0f25b344af3f73199/tasks/main.yml
@@ -66,7 +66,7 @@
 
 - name: Add the newly created EC2 instance(s) to the local host group
   local_action: lineinfile 
-                path="/tmp/ec2"
+                path="./inventory/ec2"
                 regexp={{ item.public_ip }} 
                 insertafter="[ec2]" line="{{ item.public_ip }}"
   with_items: "{{ ec2.instances }}"
