--- a/roles/aws_security_group/vars/main.yml
+++ b/roles/aws_security_group/vars/main.yml
@@ -1,6 +1,6 @@
 ---
 # vars file for roles/ec2_security_group
-aws_security_group_name: sg_test2
-aws_region: us-east-2
+aws_security_group_name: ansible
+aws_region: us-east-1
 aws_environment_identifier: test
 aws_ansible_iam_role: iam_ansible_role
