added all in one sg description

--- a/roles/aws_all_in_one_go/tasks/main.yml
+++ b/roles/aws_all_in_one_go/tasks/main.yml
@@ -31,6 +31,7 @@
   ec2_group:
     state: present
     name: "{{ aws_security_group_name }}"
+    description: this is a security group for ansible
     region: "{{ aws_region }}"
     vpc_id: "{{ my_vpc.vpc.id }}"
     tags:
