--- a/roles/aws_all_in_one_go/tasks/main.yml
+++ b/roles/aws_all_in_one_go/tasks/main.yml
@@ -27,6 +27,17 @@
       owner: aws_ansible_iam_role 
   register: my_vpc  
 
+- name: Create VPC subnet and attach to "{{ my_vpc.vpc.id }}"
+  ec2_vpc_subnet:
+    vpc_id: "{{ my_vpc.vpc.id }}"
+    region: "{{ aws_region }}"
+    state: present
+    cidr: "{{ aws_cidr }}"
+    resource_tags:
+        environment: "{{ aws_environment_identifier }}"
+        owner: "{{ aws_ansible_iam_role }}"
+  register: my_vpc_subnet  
+
 - name: Create a security group
   ec2_group:
     state: present
@@ -65,5 +76,5 @@
       ami_id: "{{ aws_ami_image_id }}"
       owner: "{{ aws_ansible_iam_role }}"
       group: "{{ firewall.group_id }}"
-    vpc_subnet_id: "{{ my_vpc.vpc.id }}"
+    vpc_subnet_id: "{{ my_vpc_subnet.subnet.id }}"
   register: ec2
