--- a/roles/aws_all_in_one_go/tasks/main.yml
+++ b/roles/aws_all_in_one_go/tasks/main.yml
@@ -66,7 +66,7 @@
 - name: Create an EC2 instance
   ec2:
     id: "{{ aws_ec2_instance_name }}"
-    key_name: "{{ aws_ec2_key_name }}"
+    key_name: test
     region: "{{ aws_region }}"
     group_id: "{{ firewall.group_id }}"
     instance_type: "{{ aws_instance_type }}"
@@ -80,4 +80,5 @@
       group: "{{ firewall.group_id }}"
     vpc_subnet_id: "{{ my_vpc_subnet.subnet.id }}"
     assign_public_ip: yes
+    monitoring: yes
   register: ec2
