--- a/roles/aws_all_in_one_go/vars/main.yml
+++ b/roles/aws_all_in_one_go/vars/main.yml
@@ -8,7 +8,7 @@ aws_environment_identifier: test
 aws_ansible_iam_role: iam_ansible_role
 aws_os_type: rhel8
 aws_ec2_group: test
-aws_ec2_instance_name: my_demo_linux
+aws_ec2_instance_name: my_demo_linux2
 aws_vpc_name: vpc_test
 aws_vpc_cidr: 10.10.0.0/16
 aws_security_group_name: ansible
