--- a/roles/aws_ec2_rhel_create/vars/main.yml
+++ b/roles/aws_ec2_rhel_create/vars/main.yml
@@ -1,14 +1,14 @@
 ---
 # vars file for roles/aws_ec2_rhel_create
-aws_region: us-east-1
-aws_ec2_key_name: test
+aws_region: us-east-2
+aws_ec2_key_name: safari
 aws_instance_type: t2.micro
-aws_ami_image_id: ami-0b0af3577fe5e3532
+aws_ami_image_id: ami-0ba62214afa52bec7
 aws_environment_identifier: test
 aws_ansible_iam_role: iam_ansible_role
 aws_os_type: rhel8.4
 aws_ec2_group: test
-aws_ec2_instance_name: my_demo_linux6
-aws_vpc_subnet_id: subnet-0efb412b4811d9aa7
-aws_ec2_cidr: 172.31.0.0/16
-aws_security_group_name: sg-0975019bd85689613
+aws_ec2_instance_name: safari-web-1
+aws_vpc_subnet_id: subnet-09791f886565cbd32
+aws_ec2_cidr: 192.168.0.0/16
+aws_security_group_name: sg-00fd18552157985d2
