--- a/roles/aws_ec2_rhel_create/vars/main.yml
+++ b/roles/aws_ec2_rhel_create/vars/main.yml
@@ -4,11 +4,11 @@ aws_region: us-east-2
 aws_ec2_key_name: safari
 aws_instance_type: t2.micro
 aws_ami_image_id: ami-0ba62214afa52bec7
-aws_environment_identifier: test
+aws_environment_identifier: dev
 aws_ansible_iam_role: iam_ansible_role
 aws_os_type: rhel8.4
 aws_ec2_group: test
-aws_ec2_instance_name: safari-web-1
+aws_ec2_instance_name: safari-web-2
 aws_vpc_subnet_id: subnet-09791f886565cbd32
 aws_ec2_cidr: 192.168.0.0/16
 aws_security_group_name: sg-00fd18552157985d2
